add shutil_get_terminal_size - for ipython 4.2.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -81,6 +81,7 @@ ptyprocess==0.5.1
 pickleshare==0.6
 path.py==8.1.2
 simplegeneric==0.8.1
+backports.shutil_get_terminal_size==1.0.0
 ipython==4.2.0
 ipdb==0.9.0
 freezegun==0.3.7
