--- a/requirements.txt
+++ b/requirements.txt
@@ -83,6 +83,7 @@ pickleshare==0.7.2
 path.py==8.2.1
 simplegeneric==0.8.1
 backports.shutil_get_terminal_size==1.0.0
+pathlib2==2.1.0
 ipython==4.2.0
 ipdb==0.10.0
 freezegun==0.3.7
