--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,8 @@ django-ga-context==0.1.0
 django-smoketest==1.0.0
 django-debug-toolbar==1.4
 django-markwhat==1.5
-fake-factory==0.5.3
+ipaddress==1.0.16
+fake-factory==0.5.7
 factory_boy==2.6.1
 django-impersonate==1.0.1
 django-registration-redux==1.4
