--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ statsd==3.2.1
 pep8==1.7.0
 pyflakes==1.2.3
 mccabe==0.5.0
-flake8==2.5.4
+pycodestyle==2.0.0
+flake8==2.6.0
 lxml==3.6.0
 fuzzywuzzy==0.10.0  # lettuce
 mock==2.0.0  # sure
