--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,7 @@ pathlib2==2.1.0
 ipython==4.2.0
 ipdb==0.10.0
 freezegun==0.3.7
+django-smtp-ssl==1.0
 
 ccnmtlsettings==0.3.0
 django-extensions==1.6.7
