--- a/requirements.txt
+++ b/requirements.txt
@@ -80,12 +80,17 @@ django_user_agents==0.3.0
 gunicorn==19.6.0
 traitlets==4.2.2
 ipython_genutils==0.1.0
+path.py==8.2.1
+backports.shutil_get_terminal_size==1.0.0
 decorator==4.0.10
 pexpect==4.2.0
 ptyprocess==0.5.1
 pickleshare==0.7.3
 simplegeneric==0.8.1
 pathlib2==2.1.0
+wcwidth==0.1.7
+prompt_toolkit==1.0.4
+pygments==2.1.3
 ipython==5.0.0
 ipdb==0.10.0
 freezegun==0.3.7
