--- a/requirements.txt
+++ b/requirements.txt
@@ -95,6 +95,7 @@ ipython==5.1.0
 ipdb==0.10.1
 freezegun==0.3.7
 django-smtp-ssl==1.0
+djangorestframework==3.4.7
 
 ccnmtlsettings==1.1.2
 django-extensions==1.7.4
