--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ six==1.10.0
 sqlparse==0.2.2  # django-debug-toolbar
 python-mimeparse==1.5.5  # tastypie
 python-dateutil==2.5.3  # tastypie
+defusedxml==0.4.1  # tastypie
 django-tastypie==0.13.3
 coverage==4.2
 logilab-common==1.2.2
