--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ django-smoketest==1.0.0
 django-debug-toolbar==1.6
 django-markwhat==1.5
 ipaddress==1.0.17
-fake-factory==0.7.2
+Faker==0.7.3
 factory_boy==2.7.0
 django-impersonate==1.0.1
 django-registration-redux==1.4
