--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ django-waffle==0.11.1
 django-cors-headers==1.3.1
 httplib2==0.9.2
 oauth==1.0.1
-oauth2==1.9rc1
+oauth2==1.9.0.post1
 oauthlib==2.0.1
 pylti>=0.1.3
 nameparser==0.5.1
