--- a/requirements.txt
+++ b/requirements.txt
@@ -103,6 +103,6 @@ ccnmtlsettings==1.3.0
 django-extensions==1.7.5
 
 boto==2.45.0
-django-storages-redux==1.3.2
+django-storages==1.5.2
 django-cacheds3storage==0.1.2
 
