force setuptools/pip/wheel update on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ env:
   - TEST_SUITE=harvest3
 python:
   - "2.7"
+before_install:
+  - pip install --upgrade setuptools pip wheel
 script:
   - make $TEST_SUITE
