--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/ccnmtl/mediathread/issues"
   },
   "devDependencies": {
+    "eslint": "~3.17.1",
     "jshint": "~2.9.1",
     "jscs": "~3.0.7"
   }
