--- a/requirements.txt
+++ b/requirements.txt
@@ -106,3 +106,8 @@ boto==2.46.1
 django-storages==1.5.2
 django-cacheds3storage==0.1.2
 
+requests-toolbelt==0.7.0
+pytz==2016.10
+isodate==0.5.4
+cached-property==1.3.0
+zeep==1.3.0
