--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ testtools==2.3.0  # python-subunit
 pbr>=0.11
 testscenarios==0.5.0  # python-subunit
 python-subunit==1.2.0  # lettuce
-lettuce==0.2.25.ccnmtl
+requirements/src/lettuce-0.2.25.ccnmtl-py2.py3-none-any.whl
 selenium==3.4.3
 six==1.10.0
 sqlparse==0.2.3  # django-debug-toolbar
