--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,12 @@ astroid==1.5.3  # pylint
 pyasn1==0.2.3
 pyOpenSSL==17.0.0
 ndg-httpsclient==0.4.2
+
+chardet==3.0.3
+idna==2.5
+urllib3==1.21.1
+certifi==2017.4.17
+
 requests==2.17.3
 contextlib2==0.5.5
 rcssmin==1.0.6
@@ -97,7 +103,7 @@ pathlib2==2.3.0
 wcwidth==0.1.7
 prompt_toolkit==1.0.14
 pygments==2.2.0
-ipython==6.1.0
+ipython==5.4.1 # pyup: <6.0.0
 ipdb==0.10.3
 freezegun==0.3.9
 django-smtp-ssl==1.0
