enable eslint security checks

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "mediathread",
   "version": "0.0.0",
-  "description": "=========================================================== Mediathread ===========================================================",
+  "description": "Mediathread  ==========",
   "main": "index.js",
   "directories": {
     "doc": "docs"
+  },
+  "eslintConfig": {
+    "extends": "secure"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +24,9 @@
   "devDependencies": {
     "eslint": "~3.17.1",
     "jshint": "~2.9.1",
-    "jscs": "~3.0.7"
+    "jscs": "~3.0.7",
+    "eslint-config-scanjs": "^1.0.0-beta4",
+    "eslint-plugin-no-unsafe-innerhtml": "^1.0.16",
+    "eslint-plugin-security": "^1.4.0"
   }
 }
