--- a/requirements.txt
+++ b/requirements.txt
@@ -112,6 +112,7 @@ djangorestframework==3.7.1
 
 ccnmtlsettings==1.3.0
 django-extensions==1.9.7
+typing==3.6.2 # needed for django-extensions
 
 boto==2.48.0
 django-storages==1.6.5
