--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,8 @@ urllib3==1.22
 certifi==2018.1.18
 cryptography==2.1.4
 pyOpenSSL==17.5.0
+asn1crypto==0.24.0  # for pyOpenSSL
+cffi==1.11.4  # for pyOpenSSL
 
 requests==2.18.4
 contextlib2==0.5.5
