--- a/requirements.txt
+++ b/requirements.txt
@@ -115,7 +115,7 @@ freezegun==0.3.10
 django-smtp-ssl==1.0
 djangorestframework==3.7.7
 
-ccnmtlsettings==1.4.0
+ccnmtlsettings==1.3.0 # pyup: <1.4.0
 django-extensions==2.0.5
 typing==3.6.4 # needed for django-extensions
 
