--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ statsd==3.2.2
 pep8==1.7.1
 pyflakes==1.6.0
 mccabe==0.6.1
-pycodestyle==2.4.0
+pycodestyle==2.3.1 # pyup: <2.4.0
 enum34==1.1.6
 configparser==3.5.0
 flake8==3.5.0
