--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ editdistance==0.4
 
 pylint==1.9.2
 
-astroid==2.0.1  # pylint
+astroid==1.6.5 # pyup: <2.0.0  # pylint
 
 pyasn1==0.4.3
 ndg-httpsclient==0.5.0
