--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pep8==1.7.1
 pyflakes==2.0.0
 mccabe==0.6.1
 pycodestyle==2.4.0
-enum34==1.1.6
+enum34==1.1.6; python_version < '3.4'
 configparser==3.5.0
 flake8==3.6.0
 lxml==4.2.5
