--- a/requirements.txt
+++ b/requirements.txt
@@ -130,7 +130,7 @@ cached-property==1.5.1
 zeep==2.5.0 # pyup: <3.0.0
 
 stevedore==1.30.0
-PyYAML==3.13
+pyyaml==4.2b1
 bandit==1.5.1
 funcsigs==1.0.2 
 mock==2.0.0
