--- a/requirements.txt
+++ b/requirements.txt
@@ -120,7 +120,12 @@ ccnmtlsettings==1.3.0 # pyup: <1.4.0
 django-extensions==2.1.9
 typing==3.6.6 # needed for django-extensions
 
-boto==2.49.0
+futures==3.2.0; python_version < '3'
+s3transfer==0.2.1
+jmespath==0.9.4
+botocore==1.12.182
+boto3==1.9.180
+
 
 functools32==3.2.3-2
 entrypoints==0.3
