boto3 version range fix

--- a/requirements.txt
+++ b/requirements.txt
@@ -123,8 +123,8 @@ typing==3.7.4 # needed for django-extensions
 futures==3.2.0; python_version < '3'
 s3transfer==0.2.1
 jmespath==0.9.4
-botocore==1.12.194
-boto3==1.9.193
+botocore>=1.12.194,<1.13.0
+boto3>=1.9.194,<1.10.0
 
 
 functools32==3.2.3-2
