--- a/requirements.txt
+++ b/requirements.txt
@@ -136,7 +136,10 @@ requests-toolbelt==0.9.1
 pytz==2019.2
 isodate==0.6.0
 cached-property==1.5.1
-zeep==2.5.0 # pyup: <3.0.0
+
+appdirs==1.4.3  # zeep
+attrs==19.1.0  # zeep
+zeep==3.4.0
 
 stevedore==1.31.0
 pyyaml==5.1.2
