--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,10 @@ django-jenkins==0.110.0
 django-stagingcontext==0.1.0
 django-ga-context==0.1.0
 django-smoketest==1.1.0
+
+# pinned for py2.7
 django-debug-toolbar==1.11 # pyup: <2.0
+
 django-markwhat==1.6.2
 ipaddress==1.0.22
 text-unidecode==1.3  # for faker
