--- a/apache/sample.conf
+++ b/apache/sample.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName mediathread.ccnmtl.columbia.edu
+  ServerName mediathread.ctl.columbia.edu
 
   ServerAdmin ccnmtl-sysadmin@columbia.edu
   CustomLog /var/log/apache2/mediathread/access.log combined
