--- a/requirements.txt
+++ b/requirements.txt
@@ -128,8 +128,9 @@ typing==3.7.4.1; python_version < '3.5'
 futures==3.2.0; python_version < '3'
 s3transfer==0.2.1
 jmespath==0.9.4
-botocore==1.13.0
-boto3>=1.9.194,<1.10.0
+
+botocore>=1.13.0,<1.14.0
+boto3>=1.10.0,<1.11.0
 
 entrypoints==0.3
 django-storages==1.7.2
