--- a/requirements.txt
+++ b/requirements.txt
@@ -48,8 +48,8 @@ chardet==3.0.4
 
 # https://urllib3.readthedocs.io/en/latest/user-guide.html#ssl-py2
 idna==2.8
-urllib3==1.25.6
-certifi==2019.9.11
+urllib3==1.25.6  # sentry-sdk
+certifi==2019.9.11  # sentry-sdk
 cryptography==2.8
 pyOpenSSL==19.0.0
 asn1crypto==1.2.0  # for pyOpenSSL
@@ -68,7 +68,8 @@ django-contrib-comments==1.9.1
 django-threadedcomments==1.2
 django-courseaffils==2.2.1
 django-statsd-mozilla==0.4.0
-raven==6.10.0
+raven==6.10.0  # Remove from ccnmtlsettings, then here.
+sentry-sdk==0.13.1
 django-appconf==1.0.3  # django_compressor
 django-compressor==2.3
 django-jenkins==0.110.0
