--- a/requirements.txt
+++ b/requirements.txt
@@ -94,7 +94,7 @@ oauth2==1.9.0.post1
 oauthlib==3.1.0
 pylti==0.7.0
 nameparser==1.0.4
-django-bootstrap3==11.0.0
+django-bootstrap3==11.1.0  # pyup: <12.0.0
 ua_parser==0.8.0
 user_agents==2.0
 django_user_agents==0.4.0
