--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -d --watch",
+    "eslint": "eslint media/js/src",
     "build": "webpack"
   },
   "repository": {
@@ -29,6 +30,7 @@
     "eslint": "~6.8.0",
     "eslint-config-scanjs": "^1.0.0-beta4",
     "eslint-plugin-no-unsafe-innerhtml": "^1.0.16",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-security": "^1.4.0",
     "jshint": "~2.10.0",
     "webpack": "^4.41.2",
