--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack -d --watch",
-    "eslint": "eslint media/js/src",
+    "eslint": "eslint media/js/src *.js",
     "build": "webpack"
   },
   "repository": {
@@ -26,12 +26,15 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "eslint": "~6.8.0",
     "eslint-config-scanjs": "^1.0.0-beta4",
     "eslint-plugin-no-unsafe-innerhtml": "^1.0.16",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-security": "^1.4.0",
+    "jest": "^24.9.0",
+    "jsdom": "^15.2.1",
     "jshint": "~2.10.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
@@ -40,6 +43,7 @@
     "js-cookie": "^2.2.1",
     "ol": "^6.1.1",
     "react": "~16.12.0",
-    "react-dom": "~16.12.0"
+    "react-dom": "~16.12.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
