--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-data-table-component": "^6.2.0",
     "react-dom": "~16.12.0",
     "styled-components": "^4.4.1",
+    "react-select": "^3.0.8",
     "whatwg-fetch": "^3.0.0"
   }
 }
