--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "js-cookie": "^2.2.1",
     "ol": "^6.1.1",
     "react": "~16.12.0",
+    "react-data-table-component": "^6.2.0",
     "react-dom": "~16.12.0",
+    "styled-components": "^4.4.1",
     "whatwg-fetch": "^3.0.0"
   }
 }
