Add jsx files to eslint checks
The new jsx files weren't getting checked by eslint.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack -d --watch",
-    "eslint": "eslint media/js/src *.js",
+    "eslint": "eslint media/js/src media/js/src/**/*.jsx *.js",
     "build": "webpack"
   },
   "repository": {
