--- a/requirements.txt
+++ b/requirements.txt
@@ -125,7 +125,7 @@ botocore>=1.14.0,<1.15.0
 boto3>=1.11.0,<1.12.0
 
 entrypoints==0.3
-django-storages==1.9
+django-storages==1.8 # pyup: <1.9
 django-cacheds3storage==0.2.1
 
 requests-toolbelt==0.9.1
