--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "get-youtube-id": "^1.0.1",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.15",
     "ol": "^6.1.1",
     "react": "~16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
