--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,7 @@ django-threadedcomments==1.2
 django-courseaffils==2.2.3
 django-statsd-mozilla==0.4.0
 sentry-sdk==0.14.3
-django-appconf==1.0.4  # django_compressor
+django-appconf==1.0.3  # pyup: <1.0.4
 django-compressor==2.4
 django-jenkins==0.110.0
 django-stagingcontext==0.1.0
