Add SameSite=None flag for session cookies
Chrome 80 needs this flag set on our session cookie, in order to use it
for media collection.

* https://docs.djangoproject.com/en/2.1/ref/settings/#std:setting-SESSION_COOKIE_SAMESITE
* https://www.chromestatus.com/feature/5088147346030592
* https://www.chromestatus.com/feature/5633521622188032

--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,10 @@ django-impersonate==1.5
 django-registration-redux==2.7
 django-waffle==0.20.0
 django-cors-headers==3.0.2 # pyup: <3.1.0
+
+# needed for django <2.1
+django-cookies-samesite==0.5.1
+
 httplib2==0.17.0
 oauth==1.0.1
 oauth2==1.9.0.post1
