--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,14 @@ language: python
 dist: bionic
 addons:
   firefox: "68.7.0esr"
+  apt:
+    packages:
+      # for Cypress
+      - libgconf-2-4
 env:
   - TEST_SUITE=jstest
   - TEST_SUITE=jenkins
+  - TEST_SUITE=cypress
   - TEST_SUITE=harvest1
   - TEST_SUITE=harvest2
 python:
@@ -14,9 +19,17 @@ matrix:
   exclude:
   - python: '2.7'
     env: TEST_SUITE=jstest
+  - python: '2.7'
+    env: TEST_SUITE=cypress
   - python: '3.6'
     env: TEST_SUITE=harvest1
   - python: '3.6'
     env: TEST_SUITE=harvest2
+cache:
+  npm: true
+  pip: true
+  directories:
+    # for Cypress
+    - ~/.cache
 script:
   - make $TEST_SUITE
