--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "test": "jest",
+    "cypress:run": "cypress run",
+    "cypress:test": "start-server-and-test 'make integrationserver' http-get://localhost:8000 cypress:run",
     "dev": "webpack -d --watch",
     "eslint": "eslint media/js/src media/js/src/**/*.jsx *.js",
     "build": "webpack"
@@ -28,6 +30,7 @@
     "@babel/preset-react": "^7.7.4",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "cypress": "^4.4.0",
     "eslint": "~6.8.0",
     "eslint-config-scanjs": "^1.0.0-beta4",
     "eslint-plugin-no-unsafe-innerhtml": "^1.0.16",
@@ -35,6 +38,7 @@
     "eslint-plugin-security": "^1.4.0",
     "jest": "^24.9.0",
     "jsdom": "^16.0.1",
+    "start-server-and-test": "^1.11.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
