Disable unit tests on python 2.7
We're running on python 3 on production, so the python 2 unit tests
aren't useful anymore.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ python:
 matrix:
   exclude:
   - python: '2.7'
+    env: TEST_SUITE=jenkins
+  - python: '2.7'
     env: TEST_SUITE=jstest
   - python: '2.7'
     env: TEST_SUITE=cypress
