--- a/requirements.txt
+++ b/requirements.txt
@@ -127,7 +127,7 @@ s3transfer==0.3.3
 jmespath==0.9.5
 
 botocore>=1.15.0,<1.16.0
-boto3==1.13.0
+boto3>=1.13.0,<1.14.0
 
 entrypoints==0.3
 django-storages==1.8 # pyup: <1.9
