--- a/requirements.txt
+++ b/requirements.txt
@@ -126,7 +126,7 @@ futures==3.2.0; python_version < '3'
 s3transfer==0.3.3
 jmespath==0.9.5
 
-botocore==1.16.0
+botocore>=1.16.0,<1.17.0
 boto3>=1.12.0,<1.13.0
 
 entrypoints==0.3
