--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -1,16 +1,19 @@
 version: 1
 update_configs:
-  - package_manager: "python"
-    directory: "/"
-    update_schedule: "live"
-    automerged_updates:
-      - match:
-          dependency_type: "development"
-          update_type: "minor"
   - package_manager: "javascript"
     directory: "/"
     update_schedule: "live"
     version_requirement_updates: "increase_versions_if_necessary"
+    automerged_updates:
+      - match:
+          dependency_type: "development"
+          update_type: "in_range"
+      - match:
+          dependency_type: "production"
+          update_type: "in_range"
+  - package_manager: "python"
+    directory: "/"
+    update_schedule: "live"
     automerged_updates:
       - match:
           dependency_type: "development"
