--- a/requirements.txt
+++ b/requirements.txt
@@ -131,7 +131,7 @@ botocore>=1.16.0,<1.17.0
 boto3>=1.13.0,<1.14.0
 
 entrypoints==0.3
-django-storages==1.8 # pyup: <1.9
+django-storages==1.9.1
 django-cacheds3storage==0.2.1
 
 requests-toolbelt==0.9.1
