--- a/requirements.txt
+++ b/requirements.txt
@@ -117,7 +117,7 @@ freezegun==0.3.15
 django-smtp-ssl==1.0
 djangorestframework==3.9.4  # pyup: <3.10
 
-ccnmtlsettings==1.8.2
+ccnmtlsettings>=1.7.0,<1.8.0
 django-extensions==2.2.9
 
 # needed for django-extensions
@@ -131,7 +131,7 @@ botocore>=1.16.0,<1.17.0
 boto3>=1.13.0,<1.14.0
 
 entrypoints==0.3
-django-storages==1.9.1
+django-storages>=1.8.0,<1.9.0
 django-cacheds3storage==0.2.1
 
 requests-toolbelt==0.9.1
