--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cypress": "^4.6.0",
     "eslint": "~6.8.0",
     "eslint-config-scanjs": "^1.0.0-beta4",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-no-unsafe-innerhtml": "^1.0.16",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-security": "^1.4.0",
