--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ pep8==1.7.1
 pyflakes==2.2.0
 mccabe==0.6.1
 pycodestyle==2.6.0
-enum34==1.1.10; python_version < '3.4'
 configparser>=4.0.2,<5.0.0
 importlib-metadata==1.6.1  # for flake8
 zipp>=1.2.0,<2.0.0
@@ -30,8 +29,7 @@ unicodecsv==0.14.1
 
 editdistance==0.5.3
 
-pylint==1.9.5; python_version < '3.5'  # pyup: ignore
-pylint==2.5.3; python_version >= '3.5'
+pylint==2.5.3
 
 astroid>=1.6.6,<2.0.0
 
@@ -111,10 +109,6 @@ djangorestframework==3.9.4  # pyup: <3.10
 ccnmtlsettings>=1.7.0,<1.8.0
 django-extensions==2.2.9
 
-# needed for django-extensions
-typing==3.7.4.1; python_version < '3.5'
-
-futures==3.2.0; python_version < '3'
 s3transfer==0.3.3
 jmespath==0.10.0
 
@@ -139,7 +133,6 @@ pyyaml==5.3.1
 bandit==1.6.2
 funcsigs==1.0.2 
 pypanopto==0.2.0
-functools32==3.2.3-2; python_version < '3'
 entrypoints==0.3
 
 billiard==3.6.3.0
