--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ env:
   - TEST_SUITE=cypress
 python:
   - "3.6"
-before_install:
-  - sudo apt-get install --yes postgresql-10-postgis-2.4
+services:
+  - postgresql
 before_script:
   - psql -c 'create database test_mediathread;' -U postgres
 cache:
