--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "get-youtube-id": "^1.0.1",
     "lodash": "^4.17.15",
+    "lodash.groupby": "^4.6.0",
     "ol": "^6.3.1",
     "react": "~16.13.0",
     "react-bootstrap": "^1.0.1",
