Set eslint to detect react version
This fixes a warning.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,11 @@
         "scanjs-rules",
         "no-unsafe-innerhtml"
     ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "env": {
         "browser": true,
         "es6": true,
